--- a/pages/armatupc.html
+++ b/pages/armatupc.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
     <title>Desafio 1</title>
   </head>
-  <body>
+  <body id="body">
     <header class="header">
       <nav class="navegador  navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -33,18 +32,20 @@
       </div>
       </nav>
     </header>
-    <section class="content">
-      <h2 class="subtitulo">Arma tu pc</h2>
-        <article class="images">
+    <section class="container  contenedorPrincipal__armatupc">
+      <h2 class="contenedorPrincipal__armatupc-titulo">Arma tu pc</h2>
+        <article class="contenedorPrincipal__armatupc-images">
           <img src="../assets/amd.jpg" alt="amd" title="amd" height="200px" width="200px" />
           <img src="../assets/intel.jpg" alt="intel" title="intel" height="200px" width="200px" />
         </article>
     </section>
     <footer id="footer" class="footer">
-      <ul>
-        <li class="pages"><a href="./contact.html">Contacto</a></li>
-        <li class="pages"><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-      </ul>
+      <section class="navbar navbar-expand-lg bg-light  footer__contacto">
+        <div class="container-fluid">
+          <a class="pages  navbar-brand" href="./contact.html">Contacto</a></li>
+          <a class="pages  navbar-brand" href="https://www.instagram.com" target="_blank">Instagram</a></li>
+        </div>
+      </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
