--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
     <title>Desafio 2</title>
   </head>
-  <body>
+  <body id="body">
     <header class="header">
       <nav class="navegador  navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -33,38 +32,126 @@
       </div>
       </nav>
     </header>
-      <ul class="lista">
-        <li>Accesorios</li>
-        <li>Almacenamiento</li>
-          <ol>
-            <li>HDD</li>
-            <li>SSD</li>
-          </ol>
-        <li>Auriculares  </li>
-        <li>Coolers  </li>
-        <li>Fuentes de poder  </li>
-        <li>Gabinetes  </li>
-        <li>Memorias RAM    </li>
-        <li>Microfonos</li>
-        <li>Monitores</li>
-        <li>Mouses</li>
-        <li>Placas de video</li>
-        <li>Placas Madre</li>
-          <ol>
-            <li>AMD</li>
-            <li>INTEL</li>
-          </ol>
-        <li>Procesadores</li>
-          <ol>
-            <li>AMD</li>
-            <li>INTEL</li>
-          </ol>
-      </ul>
+      <section class="container contenedorPrincipalProductos">
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            Accesorios
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="#">Accesorios</a></li>
+          </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+              Almacenamiento
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+              <li><a class="dropdown-item" >HDD</a></li>
+              <li><a class="dropdown-item" >SSD</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
+              Auriculares
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+              <li><a class="dropdown-item" >Auriculares</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton4" data-bs-toggle="dropdown" aria-expanded="false">
+              Coolers
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+              <li><a class="dropdown-item" >Coolers</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton5" data-bs-toggle="dropdown" aria-expanded="false">
+              Fuentes de poder
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
+              <li><a class="dropdown-item" >Fuentes de poder</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton6" data-bs-toggle="dropdown" aria-expanded="false">
+              Gabinetes
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
+              <li><a class="dropdown-item" >Gabinetes</a></li>
+
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton7" data-bs-toggle="dropdown" aria-expanded="false">
+              Memorias RAM
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton7">
+              <li><a class="dropdown-item" >RAM DDR3</a></li>
+              <li><a class="dropdown-item" >RAM DDR4</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton8" data-bs-toggle="dropdown" aria-expanded="false">
+              Microfonos
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton8">
+              <li><a class="dropdown-item" >Microfonos</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton9" data-bs-toggle="dropdown" aria-expanded="false">
+              Monitores
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton9">
+              <li><a class="dropdown-item" >Monitores</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton10" data-bs-toggle="dropdown" aria-expanded="false">
+              Perifericos
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton10">
+              <li><a class="dropdown-item" >Mouses</a></li>
+              <li><a class="dropdown-item" >Teclados</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton11" data-bs-toggle="dropdown" aria-expanded="false">
+              Placas de video
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton11">
+              <li><a class="dropdown-item" >RADEON AMD</a></li>
+              <li><a class="dropdown-item" >NVIDIA</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton12" data-bs-toggle="dropdown" aria-expanded="false">
+              Placas madre
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton12">
+              <li><a class="dropdown-item" >AMD</a></li>
+              <li><a class="dropdown-item" >INTEL</a></li>
+            </ul>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton13" data-bs-toggle="dropdown" aria-expanded="false">
+              Procesadores
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton13">
+              <li><a class="dropdown-item" >AMD</a></li>
+              <li><a class="dropdown-item" >INTEL</a></li>
+            </ul>
+          </div>
+    </section>
     <footer id="footer" class="footer">
-      <ul>
-        <li class="pages"><a href="./contact.html">Contacto</a></li>
-        <li class="pages"><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-      </ul>
+      <section class="navbar navbar-expand-lg bg-light  footer__contacto">
+        <div class="container-fluid">
+          <a class="pages  navbar-brand" href="./contact.html">Contacto</a></li>
+          <a class="pages  navbar-brand" href="https://www.instagram.com" target="_blank">Instagram</a></li>
+        </div>
+      </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
