--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="../styles/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Desafio 2</title>
   </head>
@@ -32,119 +32,167 @@
       </div>
       </nav>
     </header>
-      <section class="container contenedorPrincipalProductos">
+    <section class="container contenedorPrincipalProductos">
+      <div class="row">
+      <div class="contenedorPrincipalProductos-lista  col-md-3">
+      <div class="dropdown">
+        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          Accesorios
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="#">Accesorios</a></li>
+        </ul>
+        </div>
         <div class="dropdown">
-          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-            Accesorios
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+            Almacenamiento
           </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Accesorios</a></li>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+            <li><a class="dropdown-item" >HDD</a></li>
+            <li><a class="dropdown-item" >SSD</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
+            Auriculares
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+            <li><a class="dropdown-item" >Auriculares</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton4" data-bs-toggle="dropdown" aria-expanded="false">
+            Coolers
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+            <li><a class="dropdown-item" >Coolers</a></li>
+          </ul>
+        </div>
+        <div class=" dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton5" data-bs-toggle="dropdown" aria-expanded="false">
+            Fuentes de poder
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
+            <li><a class="dropdown-item" >Fuentes de poder</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton6" data-bs-toggle="dropdown" aria-expanded="false">
+            Gabinetes
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
+            <li><a class="dropdown-item" >Gabinetes</a></li>
+
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton7" data-bs-toggle="dropdown" aria-expanded="false">
+            Memorias RAM
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton7">
+            <li><a class="dropdown-item" >RAM DDR3</a></li>
+            <li><a class="dropdown-item" >RAM DDR4</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton8" data-bs-toggle="dropdown" aria-expanded="false">
+            Microfonos
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton8">
+            <li><a class="dropdown-item" >Microfonos</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton9" data-bs-toggle="dropdown" aria-expanded="false">
+            Monitores
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton9">
+            <li><a class="dropdown-item" >Monitores</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton10" data-bs-toggle="dropdown" aria-expanded="false">
+            Perifericos
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton10">
+            <li><a class="dropdown-item" >Mouses</a></li>
+            <li><a class="dropdown-item" >Teclados</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton11" data-bs-toggle="dropdown" aria-expanded="false">
+            Placas de video
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton11">
+            <li><a class="dropdown-item" >RADEON AMD</a></li>
+            <li><a class="dropdown-item" >NVIDIA</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton12" data-bs-toggle="dropdown" aria-expanded="false">
+            Placas madre
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton12">
+            <li><a class="dropdown-item" >AMD</a></li>
+            <li><a class="dropdown-item" >INTEL</a></li>
+          </ul>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton13" data-bs-toggle="dropdown" aria-expanded="false">
+            Procesadores
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton13">
+            <li><a class="dropdown-item" >AMD</a></li>
+            <li><a class="dropdown-item" >INTEL</a></li>
           </ul>
           </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-              Almacenamiento
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-              <li><a class="dropdown-item" >HDD</a></li>
-              <li><a class="dropdown-item" >SSD</a></li>
-            </ul>
+        </div>
+        <div class="col-md-9">
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="../assets/01.png" class="img-fluid rounded-start" alt="Mother Aorus">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Mother Aorus</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
-              Auriculares
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
-              <li><a class="dropdown-item" >Auriculares</a></li>
-            </ul>
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="../assets/02.jpg" class="img-fluid rounded-start" alt="Gabinete Corsair">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Gabinete Corsair</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton4" data-bs-toggle="dropdown" aria-expanded="false">
-              Coolers
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
-              <li><a class="dropdown-item" >Coolers</a></li>
-            </ul>
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="../assets/03.png" class="img-fluid rounded-start" alt="Teclado hyperx">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Teclado Hyperx</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton5" data-bs-toggle="dropdown" aria-expanded="false">
-              Fuentes de poder
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
-              <li><a class="dropdown-item" >Fuentes de poder</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton6" data-bs-toggle="dropdown" aria-expanded="false">
-              Gabinetes
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton6">
-              <li><a class="dropdown-item" >Gabinetes</a></li>
-
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton7" data-bs-toggle="dropdown" aria-expanded="false">
-              Memorias RAM
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton7">
-              <li><a class="dropdown-item" >RAM DDR3</a></li>
-              <li><a class="dropdown-item" >RAM DDR4</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton8" data-bs-toggle="dropdown" aria-expanded="false">
-              Microfonos
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton8">
-              <li><a class="dropdown-item" >Microfonos</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton9" data-bs-toggle="dropdown" aria-expanded="false">
-              Monitores
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton9">
-              <li><a class="dropdown-item" >Monitores</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton10" data-bs-toggle="dropdown" aria-expanded="false">
-              Perifericos
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton10">
-              <li><a class="dropdown-item" >Mouses</a></li>
-              <li><a class="dropdown-item" >Teclados</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton11" data-bs-toggle="dropdown" aria-expanded="false">
-              Placas de video
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton11">
-              <li><a class="dropdown-item" >RADEON AMD</a></li>
-              <li><a class="dropdown-item" >NVIDIA</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton12" data-bs-toggle="dropdown" aria-expanded="false">
-              Placas madre
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton12">
-              <li><a class="dropdown-item" >AMD</a></li>
-              <li><a class="dropdown-item" >INTEL</a></li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton13" data-bs-toggle="dropdown" aria-expanded="false">
-              Procesadores
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton13">
-              <li><a class="dropdown-item" >AMD</a></li>
-              <li><a class="dropdown-item" >INTEL</a></li>
-            </ul>
-          </div>
-    </section>
+        </div>
+    </div>
+  </section>
     <footer id="footer" class="footer">
       <section class="navbar navbar-expand-lg bg-light  footer__contacto">
         <div class="container-fluid">
